# kennsh

./: .gitignore  .gitmodules  build.sh  clean.sh
client/: clean.sh  client
kennsh/: .gitignore  Cargo.toml
kennsh/src/: command.rs  env_util.rs  error.rs  highlight.rs  main.rs  str_extension.rs  syntax_parser.rs  window_title.rs
kennsh/src/command/: cat.rs  cd.rs  color_test.rs  env.rs  exit.rs  external.rs  head.rs  prompt.rs  server.rs  set.rs
kennsh_syscall_macro/: Cargo.toml
kennsh_syscall_macro/src/: lib.rs  match_error.rs  no_wrap.rs
peek_iter/: Cargo.toml
peek_iter/src/: lib.rs
skip_last_iter/: Cargo.toml
skip_last_iter/src/: lib.rs
