[package]
name = "kennsh"
version = "0.1.0"
authors = ["Dan Cojocaru <dan.cojocaru00@e-uvt.ro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_wrapper = { path = "../c_wrapper" }
kennsh_syscall_macro = { path = "../kennsh_syscall_macro" }
rustyline = "7.1.0"
serde = { version = "1.0.118", features = [ "derive" ] }
serde_json = "1.0.60"
peek_iter = { path = "../peek_iter" }
skip_last_iter = { path = "../skip_last_iter" }
crossterm = "0.19.0"
either = "1.6.1"
socket2 = "0.3.19"
uuid = { version = "0.8.1", features = ["v4"] }
